--- a/SocialMediaApp.Core/SocialMediaApp.Core.csproj
+++ b/SocialMediaApp.Core/SocialMediaApp.Core.csproj
@@ -8,6 +8,12 @@
 
   <ItemGroup>
     <Folder Include="Domain\" />
+    <Folder Include="DTO\" />
+    <Folder Include="Helper\" />
+    <Folder Include="MappingProfile\" />
+    <Folder Include="Services\" />
+    <Folder Include="ServicesContract\" />
+    <Folder Include="RepositoriesContract\" />
   </ItemGroup>
 
 </Project>
