--- a/SocialMediaApp.Infrastructure/SocialMediaApp.Infrastructure.csproj
+++ b/SocialMediaApp.Infrastructure/SocialMediaApp.Infrastructure.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+    <Folder Include="Configuration\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
