Solve the Bug in Delete Behaviour AlhamdULIllah

--- a/SocialMediaApp.API/SocialMediaApp.API.csproj
+++ b/SocialMediaApp.API/SocialMediaApp.API.csproj
@@ -24,4 +24,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SocialMediaApp.Infrastructure\SocialMediaApp.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
