--- a/SocialMediaApp.API/appsettings.json
+++ b/SocialMediaApp.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "connstr": "Server=. ; Database=SocialMediaApp ; TrustServerCertificate=true; Integrated Security = SSPI;"
+  }
 }
