--- a/SocialMediaApp.API/appsettings.json
+++ b/SocialMediaApp.API/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "connstr": "Server=. ; Database=SocialMediaApp ; TrustServerCertificate=true; Integrated Security = SSPI;"
+  },
+  "JWT": {
+    "Key": "sz8eI7OdHBrjrIo8j9nTW/rQyO1OvY0pAQ2wDKQZw/0=",
+    "Issuer": "SecureApi",
+    "Audience": "SecureApiUser",
+    "DurationInDays": 30
   }
 }
