--- a/SocialMediaApp.API/appsettings.json
+++ b/SocialMediaApp.API/appsettings.json
@@ -7,12 +7,20 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "connstr": "Server=. ; Database=SocialMediaApp ; TrustServerCertificate=true; Integrated Security = SSPI;"
+    "connstr": "Server=. ; Database=SocialMediaApp ; TrustServerCertificate=true; Integrated Security = SSPI;",
+    "hostingString": "Server=db7824.public.databaseasp.net; Database=db7824; User Id=db7824; Password=5s+HG9b_r#6D; Encrypt=False; MultipleActiveResultSets=True;"
   },
   "JWT": {
     "Key": "sz8eI7OdHBrjrIo8j9nTW/rQyO1OvY0pAQ2wDKQZw/0=",
     "Issuer": "SecureApi",
     "Audience": "SecureApiUser",
     "DurationInDays": 30
+  },
+  "MailSettings": {
+    "Email": "20912021100209@fci.zu.edu.eg",
+    "DisplayName": "Support Assistant",
+    "Password": "AhmedAteya12348@",
+    "Host": "smtp-mail.outlook.com",
+    "Port": 587
   }
 }
