--- a/SocialMediaApp.Core/SocialMediaApp.Core.csproj
+++ b/SocialMediaApp.Core/SocialMediaApp.Core.csproj
@@ -13,9 +13,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.7.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="MimeKit" Version="4.7.1" />
   </ItemGroup>
 
 </Project>
