--- a/SocialMediaApp.API/appsettings.json
+++ b/SocialMediaApp.API/appsettings.json
@@ -17,9 +17,9 @@
     "DurationInDays": 30
   },
   "MailSettings": {
-    "Email": "your email",
+    "Email": "20912021100209@fci.zu.edu.eg",
     "DisplayName": "Support Assistant",
-    "Password": "your Password",
+    "Password": "AhmedAteya12348@",
     "Host": "smtp-mail.outlook.com",
     "Port": 587
   }
