--- a/SocialMediaApp.Core/SocialMediaApp.Core.csproj
+++ b/SocialMediaApp.Core/SocialMediaApp.Core.csproj
@@ -7,14 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Helper\" />
-    <Folder Include="MappingProfile\" />
-    <Folder Include="Services\" />
-    <Folder Include="ServicesContract\" />
     <Folder Include="RepositoriesContract\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="MailKit" Version="4.7.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
