--- a/SocialMediaApp.API/appsettings.json
+++ b/SocialMediaApp.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "connstr": "Server=. ; Database=SocialMediaApp ; TrustServerCertificate=true; Integrated Security = SSPI;",
+    "connstr": "Server=ADHAM-PC\\SQLEXPRESS; Database=SocialMediaApp ; TrustServerCertificate=true; Integrated Security = SSPI;",
     "hostingString": "Server=db7824.public.databaseasp.net; Database=db7824; User Id=db7824; Password=5s+HG9b_r#6D; Encrypt=False; MultipleActiveResultSets=True;"
   },
   "JWT": {
