Like Controller && SignalR

--- a/SocialMediaApp.Core/SocialMediaApp.Core.csproj
+++ b/SocialMediaApp.Core/SocialMediaApp.Core.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="MimeKit" Version="4.7.1" />
+    <PackageReference Include="Scrutor" Version="4.2.2" />
   </ItemGroup>
 
 </Project>
