--- a/SocialMediaApp.API/SocialMediaApp.API.csproj
+++ b/SocialMediaApp.API/SocialMediaApp.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -32,7 +32,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\Upload\" />
+    <Folder Include="Upload\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
