Change the DB and Logic of Retweet :)

--- a/SocialMediaApp.API/SocialMediaApp.API.csproj
+++ b/SocialMediaApp.API/SocialMediaApp.API.csproj
@@ -32,8 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Upload\" />
-    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\Upload\" />
   </ItemGroup>
 
 </Project>
