--- a/SocialMediaApp.Core/SocialMediaApp.Core.csproj
+++ b/SocialMediaApp.Core/SocialMediaApp.Core.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="MimeKit" Version="4.7.1" />
     <PackageReference Include="Scrutor" Version="4.2.2" />
+    <PackageReference Include="Stripe.net" Version="45.14.0" />
   </ItemGroup>
 
 </Project>
