--- a/SocialMediaApp.Infrastructure/SocialMediaApp.Infrastructure.csproj
+++ b/SocialMediaApp.Infrastructure/SocialMediaApp.Infrastructure.csproj
@@ -14,6 +14,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Stripe.net" Version="45.14.0" />
   </ItemGroup>
 
   <ItemGroup>
